--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=58496d92574dfbe8dc0b",
+    "/css/app.css": "/css/app.css?id=42edab709de89eb822d9"
 }
